--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,15 @@
 {
-    "name": "rscata/SendmachineApiClient",
+    "name": "sendmachine/SendmachineApiClient",
     "description": "Sendmachine API Client",
+    "keywords": ["sendmachine","api","email"],
+    "homepage": "https://github.com/Sendmachine/SendmachineApiClient",
+    "authors": [
+        {
+            "name": "Cata",
+            "email": "catalin.rscata@gmail.com",
+            "role": "Developer"
+        }
+    ],
     "require": {
         "php": ">=5.3.0",
         "ext-curl": "*"
