--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Sendmachine API Client",
     "keywords": ["sendmachine","api","email"],
     "homepage": "https://github.com/Sendmachine/SendmachineApiClient",
+    "license": "MIT",
     "require": {
         "php": ">=5.3.0",
         "ext-curl": "*"
